--- a/About.html
+++ b/About.html
@@ -94,7 +94,7 @@
 
              <nav>
                 <ul>
-                <li><a href="Anca.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About me</a></li>
                 <li><a href="My Work.html">My work</a></li>
                 <li><a href="Contact.html">Contact</a></li>
